# pulse-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_zh.md  pyproject.toml  simple_test_runner.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: DEPLOYMENT.md  DEVELOPMENT.md
docs/local/: AGENTS_COLLAB_DESIGN_CMD.md
docs/local/history/: AGENTS_COLLAB_DESIGN.md  AnalysisReport.md  COMMAND_SYSTEM_DESIGN.md  DEVELOPMENT.md  UpgradeAdvices.md
docs/local/module-docs/: APPENDIX.md  ARCHITECTURE.md  CLI.md  EXEC.md  QUEUES.md  README.md  SKILLS.md  WORKSPACE.md
docs/local/templates/: escalation-template.md
docs/references/: commands.md
skills/: mai-cli.skill
skills/mai-cli/: SKILL.md
skills/mai-cli/references/: commands.md  queues.md
src/mai/: __init__.py  __main__.py  agent.py  bitable.py  config.py  daily_summary.py  escalation.py  global_config.py  issue.py  issue_list.py  lock.py  log.py  mai.py  project.py  project_registry.py  queue.py  safe_exec.py  sync.py
tests/: test_emoji.py  test_issue_creator.py  test_mai.py  test_pulse.py  test_v1_10_3_setup.py  test_v1_8_0.py  test_v1_9_0.py  test_v1_9_2_permissions.py
